--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js" crossorigin="anonymous"></script>
   <script type="module" src="app.js"></script>
+  <script type="module" src="config.js"></script>
 
   
 
