--- a/my_admin_panel.html
+++ b/my_admin_panel.html
@@ -29,5 +29,6 @@
   <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script type="module" src="admin.js"></script>
+  <script type="module" src="config.js"></script>
 </body>
 </html>
